hellogo-v1/k8s-manifests/hellogo-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hellogo
    version: v1
  name: hellogo-v1
  namespace: demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: hellogo-v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hellogo
        deployment: hellogo-v1
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo/hellogo:v1
        imagePullPolicy: IfNotPresent
        name: hellogo-v1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
