hellogo-v1/k8s-manifests/hellogo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellogo
  name: hellogo
  namespace: demo
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellogo
  sessionAffinity: None
  type: ClusterIP
